2.1.0/_sources/gallery/subplots_axes_and_figures/custom_figure_class.rst.txt


.. _sphx_glr_gallery_subplots_axes_and_figures_custom_figure_class.py:


===================
Custom Figure Class
===================

You can pass a custom Figure constructor to figure if you want to derive from
the default Figure.  This simple example creates a figure with a figure title.




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_custom_figure_class_001.png
    :align: center





.. code-block:: python

    from matplotlib.pyplot import figure, show
    from matplotlib.figure import Figure


    class MyFigure(Figure):
        def __init__(self, *args, **kwargs):
            """
            custom kwarg figtitle is a figure title
            """
            figtitle = kwargs.pop('figtitle', 'hi mom')
            Figure.__init__(self, *args, **kwargs)
            self.text(0.5, 0.95, figtitle, ha='center')


    fig = figure(FigureClass=MyFigure, figtitle='my title')
    ax = fig.add_subplot(111)
    ax.plot([1, 2, 3])

    show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: custom_figure_class.py <custom_figure_class.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: custom_figure_class.ipynb <custom_figure_class.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
